<resources>
    <string name="app_name">iDo Smart</string>
    <string name="LOGTAG">iDoSmart</string>
	<string name="ACTION_REQ_DEV_LIST_AVAILABLE">com.qodome.idosmart.ACTION_REQ_DEV_LIST_AVAILABLE</string>
	<string name="ACTION_RSP_DEV_LIST_AVAILABLE">com.qodome.idosmart.ACTION_RSP_DEV_LIST_AVAILABLE</string>
	<string name="ACTION_REQ_DEV_LIST_CONNECTED">com.qodome.idosmart.ACTION_REQ_DEV_LIST_CONNECTED</string>
	<string name="ACTION_RSP_DEV_LIST_CONNECTED">com.qodome.idosmart.ACTION_RSP_DEV_LIST_CONNECTED</string>
	<string name="ACTION_STOP_SCAN">com.qodome.idosmart.ACTION_STOP_SCAN</string>
	<string name="ACTION_CONNECT_TO_DEVICE">com.qodome.idosmart.ACTION_CONNECT_TO_DEVICE</string>
	<string name="ACTION_DISCONNECT">com.qodome.idosmart.ACTION_DISCONNECT</string>
	<string name="ACTION_UPDATE_TEMP">com.qodome.idosmart.ACTION_UPDATE_TEMP</string>
	<string name="ACTION_OAD_STATUS">com.qodome.idosmart.ACTION_OAD_STATUS</string>
	<string name="ACTION_OAD_VERSION">com.qodome.idosmart.ACTION_OAD_VERSION</string>
	<string name="ACTION_SET_COLOR">com.qodome.idosmart.ACTION_SET_COLOR</string>
	<string name="ACTION_STOP">com.qodome.idosmart.ACTION_STOP</string>
	<string name="ACTION_EXTRA">com.qodome.idosmart.ACTION_EXTRA</string>
    
    <string name="low_temp_notify">Low Temp Warning</string>
    <string name="low_temp_notify_sum">Enable the low temperature warning function</string>
    <string name="low_temp_notify_value_title">Low Temp Warning Threshold</string>
    <string name="low_temp_notify_value_summaries">LOW</string>
    <item name="low_temp_notify_value_default" format="float" type="string">0.5</item>
    <string name="low_temp_notify_value_message">Temperature Low Threshold: </string>

    <string name="high_temp_notify">High Temp Warning</string>
    <string name="high_temp_notify_sum">Enable the high temperature warning function</string>
    <string name="high_temp_notify_value_title">High Temp Warning Threshold</string>
    <string name="high_temp_notify_value_summaries">HIGH</string>
    <item name="high_temp_notify_value_default" format="float" type="string">0.5</item>
    <string name="high_temp_notify_value_message">Temperature High Threshold:</string>

	<string-array name="temp_unit_selection_entries">
        <item>°C</item>
        <item>°F</item>
        <item>K</item>
    </string-array>
	<string-array name="temp_unit_selection_entryvalues">
        <item>C_TYPE</item>
        <item>F_TYPE</item>
        <item>K_TYPE</item>
    </string-array>
    <string name="temp_unit_default">C_TYPE</string> 
    <string name="temp_unit_C">C_TYPE</string>
    <string name="temp_unit_F">F_TYPE</string>
    <string name="temp_unit_K">K_TYPE</string>
    
    <string name="temp_unit_selection_title">Unit of Measurement </string>
    <string name="temp_unit_selection_dialogtitle">Select the unit of measurement</string>
    <string name="temp_unit_selection_summary">°C/°F/K</string>
    
    <string name="IDO_MODEL_NAME">ID14TB</string>
    <string name="IMG_1_0_1_03_A">1.0.1(03A)</string>
    <string name="IMG_1_0_1_03_B">1.0.1(03B)</string>
    
</resources>
